--- a/build.gradle
+++ b/build.gradle
@@ -14,6 +14,8 @@ dependencies {
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
 
     implementation 'ch.qos.logback:logback-classic:1.2.3'
+    implementation 'org.yaml:snakeyaml:1.28'
+
     testImplementation 'org.assertj:assertj-core:3.16.1'
 
 
