--- a/.gitignore
+++ b/.gitignore
@@ -38,9 +38,9 @@
 # .idea/artifacts
 # .idea/compiler.xml
 # .idea/jarRepositories.xml
-# .idea/modules.xml
-# .idea/*.iml
-# .idea/modules
+.idea/modules.xml
+.idea/*.iml
+.idea/modules
 # *.iml
 # *.ipr
 
