--- a/build.gradle
+++ b/build.gradle
@@ -18,7 +18,7 @@ dependencies {
 
     testImplementation 'org.assertj:assertj-core:3.16.1'
 
-
+    implementation 'com.h2database:h2:1.4.200'
 }
 
 test {
